fix<css>: Content top overlapping notification and user menu bar
refactor: Deleted Singleton class

--- a/public/resource/css/style.css
+++ b/public/resource/css/style.css
@@ -163,7 +163,7 @@ input[type="text"] ~ .btn[data-password-toggle] > i::before {
 .content-top {
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 700;
     background-color: var(--bs-white);
 }
 
